--- a/_posts/2021-11-10-scalable.markdown
+++ b/_posts/2021-11-10-scalable.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Scalable Reinforcement Learning Policies for Multi-Agent Control"
 date:   2021-11-10 22:21:59 +00:00
-image: /images/trackingfig.png
+image: images/trackingfig.png
 categories: research
 authors: "<strong>Christopher D. Hsu</strong>, Heejin Jeong, George J. Pappas, Pratik Chaudhari"
 venue: "IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)"
