--- a/_posts/2021-11-10-scalable.markdown
+++ b/_posts/2021-11-10-scalable.markdown
@@ -4,7 +4,7 @@ title:  "Scalable Reinforcement Learning Policies for Multi-Agent Control"
 date:   2021-11-10 22:21:59 +00:00
 image: images/trackingfig.png
 categories: research
-authors: "<strong>Christopher D. Hsu</strong>, Heejin Jeong, George J. Pappas, Pratik Chaudhari"
+authors: "<strong>Christopher D. Hsu</strong>, Heejin Jeong, George J. Pappas, and Pratik Chaudhari"
 venue: "IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)"
 arxiv: https://arxiv.org/abs/2011.08055
 code: https://github.com/christopher-hsu/scalableMARL
