--- a/_posts/2022-08-03-model4pd.markdown
+++ b/_posts/2022-08-03-model4pd.markdown
@@ -7,4 +7,4 @@ categories: research
 authors: "<strong>Christopher D. Hsu</strong>, Mulugeta A. Haile, and Pratik Chaudhari"
 ---
 
-We develop a model of the multi-agent perimter-defense game to calculate how an adaptive defense should be organized against an attacker distribution that may be unknown and/or envolving. Furthermore, we show that the defender team can achieve near-optimal harm using a decentralized approach.
+We develop a model of the multi-agent perimeter-defense game to calculate how an adaptive defense should be organized against an attacker distribution that may be unknown and/or evolving. Furthermore, we show that the defender team can achieve near-optimal harm using a decentralized approach.
