--- a/_posts/2022-08-03-model4pd.markdown
+++ b/_posts/2022-08-03-model4pd.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "A Model for Perimeter Defense Problems with Heterogeneous Teams"
 date:   2022-08-01 22:21:59 +00:00
-image: images/model4pd.png
+image: images/model4PD.png
 categories: research
 authors: "<strong>Christopher D. Hsu</strong>, Mulugeta A. Haile, and Pratik Chaudhari"
 ---
