png of thumbnail

--- a/_posts/2022-08-03-model4pd.markdown
+++ b/_posts/2022-08-03-model4pd.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "A Model for Perimeter Defense Problems with Heterogeneous Teams"
 date:   2022-08-02 22:21:59 +00:00
-image: images/shapefig1.pdf
+image: images/shapefig1.png
 categories: research
 authors: "<strong>Christopher D. Hsu</strong>, Mulugeta A. Haile, and Pratik Chaudhari"
 arxiv: https://arxiv.org/abs/2208.01430
